# pso2-protocol-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.MD  ppac.md  testing.sh
packet_docs/: README.MD
packetlib_ffi/: Cargo.toml  README.MD  build.rs  cbindgen.toml  packetlib.cs  packetlib.h
packetlib_ffi/examples/: main.c  main.cpp  main.cs  main.csproj  main.go
packetlib_ffi/examples/py/: main.py  packetlib_py.pyx  setup.py
packetlib_ffi/include/: packetlib.cs  packetlib.h  packetlib.pxd  packetlib.py
packetlib_ffi/src/: connection.rs  lib.rs  ppac.rs  protocol.rs
packetlib_impl/: Cargo.toml
packetlib_impl/src/: lib.rs  packet_structs.rs  protocol_enum.rs
ppac_tools/: README.md
ppac_tools/ppak_reader/: Cargo.toml
ppac_tools/ppak_reader/src/: main.rs
ppac_tools/reppac/: Cargo.toml
ppac_tools/reppac/src/: main.rs
src/: asciistring.rs  connection.rs  derive_reexports.rs  encryption.rs  fixed_types.rs  lib.rs  ppac.rs  protocol_docs.rs  proxy_connection.rs
src/connection/: conn_impl.rs  mod.rs  proxy.rs
src/protocol/: chat.rs  colfolder.rs  default_types.rs  emergency.rs  flag.rs  friendavatar.rs  friends.rs  items.rs  login.rs  mail.rs  missionpass.rs  missions.rs  mod.rs  objects.rs  orders.rs  palette.rs  party.rs  playershop.rs  playerstatus.rs  pse_burst.rs  questlist.rs  server.rs  settings.rs  spawn.rs  symbolart.rs  traits.rs  unk10.rs  unk19.rs  unk1e.rs  unk23.rs  unk2a.rs  unk31.rs  unk34.rs
src/protocol/models/: character.rs  item_attrs.rs  mod.rs
tests/: derive.rs
