[package]
name = "pso2packetlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ngs_packets", "item_attrs"]
connection = ["dep:rsa"]
proxy = []
ppac = ["dep:zstd"]
ngs_packets = []
item_attrs = []
vita_enc = ["dep:rc4", "dep:rand"]
base_enc = ["dep:rand", "dep:aes", "dep:cbc", "dep:sha2", "dep:hmac"]
ngs_enc = ["dep:rand", "dep:aes", "dep:cbc", "dep:sha2", "dep:zstd"]
serde = ["dep:serde", "half/serde"]

[dependencies]
aes = { version = "0.8.3", optional = true }
byteorder = "1.5.0"
cbc = { version = "0.1.2", optional = true }
hmac = { version = "0.12.1", optional = true }
rand = { version = "0.8.5", optional = true }
rc4 = { version = "0.1.0", optional = true }
rsa = { version = "0.9.6", optional = true }
serde = { version = "1.0.195", optional = true, features = ["derive"] }
sha2 = { version = "0.10.8", optional = true }
zstd = { version = "0.13.0", optional = true }
packetlib_impl = { path = "packetlib_impl" }
half = "2.3.1"

[package.metadata.docs.rs]
all-features = true
no-default-features = true
rustc-args = ["--cfg", "docsrs"]
