[package]
name = "pso2packetlib"
description = "A library for working with the PSO2 network protocol"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PhantasyServer/pso2-protocol-lib"
keywords = ["pso2"]
categories = ["network-programming"]
readme = "README.MD"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = []
connection = ["dep:rsa"]
ppac = ["dep:zstd"]
ngs_packets = []
item_attrs = []
vita_enc = ["dep:rc4", "dep:rand"]
base_enc = ["dep:rand", "dep:aes", "dep:cbc", "dep:sha2", "dep:hmac"]
ngs_enc = ["dep:rand", "dep:aes", "dep:cbc", "dep:sha2", "dep:zstd"]
serde = ["dep:serde", "half/serde", "bitflags/serde", "bitvec/serde"]
tokio = ["dep:tokio" ]
split_connection = ["connection"]

[dependencies]
aes = { version = "0.8.4", optional = true }
byteorder = "1.5.0"
cbc = { version = "0.1.2", optional = true }
hmac = { version = "0.12.1", optional = true }
rand = { version = "0.8.5", optional = true }
rc4 = { version = "0.1.0", optional = true }
rsa = { version = "0.9.6", optional = true }
serde = { version = "1.0.203", optional = true, features = ["derive"] }
sha2 = { version = "0.10.8", optional = true }
zstd = { version = "0.13.2", optional = true }
pso2packetlib_impl = { path = "packetlib_impl", version = "=0.2.0" }
half = "2.4.1"
tokio = { version = "1.38.0", optional = true, features = ["net", "sync", "io-util", "macros"] }
bitflags = "2.6.0"
thiserror = "1.0.61"
bitvec = "1.0.1"

[package.metadata.docs.rs]
all-features = true
no-default-features = true
rustc-args = ["--cfg", "docsrs"]
